<resources>
    <string name="app_name">Club ACM ENISo</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your login or password !! ❌</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="score_is">Your Score IS</string>
    <string name="keepCod">Keep Coding :D</string>
    <string name="title_activity_navigate">ACM ENISo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hiMsg">Hello</string>
    <string name="keepCoding">Keep Coding :D</string>
    <string name="acmScore">Your Score</string>
    <string name="codefrocesScore">Solved Problems</string>
    <string name="top_coders">TOP CODERS</string>
    <string name="refresh">REFRESH</string>
    <string name="my_numbers">my numbers</string>
    <string name="version">Version</string>
    <string name="name_user">TextView</string>
    <string name="codeforces_score">TextView</string>
    <string name="footer">footer</string>
    <string name="background">backgroung</string>
    <string name="logo">logo</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="initial_val">0</string>
    <string name="statistics">STATISTICS</string>
    <string name="refresh_text">REFRESH</string>
    <string name="loading_text">Loading …</string>
    <string name="score">Score :</string>
    <string name="solved">Solved :</string>
    <string name="time">time</string>
    <string name="hint_text">0</string>
    <string name="hint_name">name</string>
    <string name="background_text">Background</string>
    <string name="a_text">A</string>
    <string name="text_c">C</string>
    <string name="text_b">B</string>
    <string name="text_d">D</string>
    <string name="text_e">E</string>
    <string name="text_f">F</string>
    <string name="text_g">G</string>
    <string name="text_h">H</string>
    <string name="body_hint">body</string>

</resources>
