<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acm.scoresystem.LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        android:contentDescription="@string/background" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_above="@id/password"
        android:background="@drawable/rounded_text"
        android:drawableStart="@drawable/login_icon"
        android:drawablePadding="5dp"
        android:hint="@string/hint_login"
        android:inputType="phone"
        android:paddingStart="8dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_above="@id/btn_login"
        android:background="@drawable/rounded_text"
        android:drawableStart="@drawable/password_logo"
        android:drawablePadding="5dp"
        android:hint="@string/hint_password"
        android:inputType="numberPassword"
        android:paddingStart="8dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="180dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_text"
        android:backgroundTint="@color/btn_login"
        android:text="@string/btn_login"
        android:textColor="@color/btn_login_text"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>