<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/item_shape"
    android:backgroundTint="#25000000"
    tools:targetApi="lollipop">

    <TextView
        android:id="@+id/rang"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/item_shape"
        android:gravity="center"
        android:hint="@string/hint_text"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/rang"
        android:gravity="center_vertical"
        android:overScrollMode="always"
        android:text="@string/hint_name"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/name"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/score"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/scoreText"
            android:text="@string/hint_text"
            android:textColor="@color/white"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/solvedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/score"
            android:text="@string/solved"
            android:textColor="@color/white"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/solved"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/solvedText"
            android:text="@string/hint_text"
            android:textColor="@color/white"
            android:textSize="@dimen/small_size" />

    </RelativeLayout>
</RelativeLayout>